# xcookies

./: .gitignore  README.md  credentials.example.txt  pyproject.toml
xcookies/: __init__.py  cli.py  extractor.py
