[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xcookies"
version = "1.0.0"
description = "Extract cookies from X accounts using auth tokens"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "playwright>=1.40.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.scripts]
xcookie = "xcookies.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["xcookies"]
